implement article controller
